fix: meta tags in index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Konichiwa, I'm akumarujon, self-taught Developer from Uzbekistan. This is my personal website. You can find more information about me here."
+    />
+    <meta
+      property="og:description"
+      content="Konichiwa, I'm akumarujon, self-taught Developer from Uzbekistan. This is my personal website. You can find more information about me here."
+    />
+    <meta property="og:site_name" content="akumarujon UwU" />
+    <meta property="og:url" content="https://akumaru.ninja" />
+    <meta property="og:image" content="https://akumaru.ninja/og.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="twitter:image" content="https://akumaru.ninja/og.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+
     <title>akumarujon's land</title>
     <link
       rel="stylesheet"
