fix: add `og:url`

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="twitter:image" content="https://akumaru.ninja/og.png" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="og:url" content="https://akumaru.ninja/">
 
     <title>akumarujon's land</title>
     <link
