--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <meta name="og:image" content="https://akumaru.ninja/og.jpg">
+    <meta name="og:url" content="https://akumaru.ninja/">
+    <meta name="twitter:image" content="https://akumaru.ninja/og.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <title>Tapnisu</title>
+    <meta
+      name="description"
+      content="Konichiwa, I'm akumarujon, self-taught Developer from Uzbekistan. This is my personal website. You can find more information about me here."
+    >
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
