refactor: change name

--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
     <link rel="icon" type="image/x-icon" href="/favicon.png">
 
     <!-- Basic SEO -->
-    <title>akumarujon's land</title>
+    <title>akmal's land</title>
     <meta
       name="description"
-      content="Konichiwa, I'm akumarujon, self-taught Developer from Uzbekistan. This is my personal website. You can find more information about me here."
+      content="Konichiwa, I'm akmal, self-taught Developer from Uzbekistan. This is my personal website. You can find more information about me here."
     >
 
     <!-- Open Graph / Facebook / Discord -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://akumaru.ninja/">
-    <meta property="og:title" content="akumarujon's land">
+    <meta property="og:title" content="akmal's land">
     <meta
       property="og:description"
-      content="Konichiwa, I'm akumarujon, self-taught Developer from Uzbekistan. This is my personal website. You can find more information about me here."
+      content="Konichiwa, I'm akmal, self-taught Developer from Uzbekistan. This is my personal website. You can find more information about me here."
     >
     <meta property="og:image" content="https://akumaru.ninja/og.png">
-    <meta property="og:site_name" content="akumarujon UwU">
+    <meta property="og:site_name" content="akmal UwU">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://akumaru.ninja/">
-    <meta name="twitter:title" content="akumarujon's land">
+    <meta name="twitter:title" content="akmal's land">
     <meta
       name="twitter:description"
-      content="Konichiwa, I'm akumarujon, self-taught Developer from Uzbekistan. This is my personal website. You can find more information about me here."
+      content="Konichiwa, I'm akmal, self-taught Developer from Uzbekistan. This is my personal website. You can find more information about me here."
     >
     <meta name="twitter:image" content="https://akumaru.ninja/og.png">
 
